set config
This commit adds dynamic configuration change.
