# mlvt/server/views/config.py
@@ -1,8 +1,13 @@
+from copy import deepcopy
+
+from mlvt.config.config_manager import ConfigManager
+from mlvt.server.config import CURRENT_CONFIG_FILE
 from mlvt.server.views.base import BaseView
 
 
 class ConfigsView(BaseView):
     def get(self, name):
+        self.init_cm()
         config = self._get_config(name)
         if config is None:
             return f'Configuration with name ({name}) not found', 404
@@ -10,6 +15,7 @@ class ConfigsView(BaseView):
         return config, 200
 
     def search(self):
+        self.init_cm()
         configs = []
         for config_name in self.cm.configurations:
             configs.append(self._get_config(config_name))
@@ -19,6 +25,15 @@ class ConfigsView(BaseView):
         if name not in self.cm.configurations:
             return
 
-        config = self.cm.get_config()
+        config = deepcopy(self.cm.get_config(name))
         config['name'] = name
         return config
+
+    def put(self, name):
+        if name not in ConfigManager.configurations:
+            return 'Config file not found', 404
+
+        with open(CURRENT_CONFIG_FILE, 'w') as f:
+            f.write(name)
+
+        return 'New config set', 200
